# toml
[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gabse"
version = "0.1.2"
description = "The GABSE (Generic Agent-Based Simulation for Engineering) framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Carl Toller Melén", email = "carl@tollermelen.se" },
]
maintainers = [
  { name = "Carl Toller Melén", email = "carl@tollermelen.se" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Simulation",
]

dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/tm-carl/GABSE"
#Documentation = ""
Repository = "https://github.com/tm-carl/GABSE"
Issues = "https://github.com/tm-carl/GABSE/issues"

[tool.setuptools.packages.find]
include = ["gabse"]

[tool.setuptools.dynamic]
version = { attr = "gabse.__version__" }